# orion-assistent

./: README.md  index.html  main.py  pyproject.toml  requirements.txt  robots.txt  sitemap.html
docs/: index.html
src/Orion/: __init__.py  ai.py  assistant.py  commands.py  config.py  stt.py  tts.py
